--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </nav>
       <!--Header Image and header text start here-->
       <div class='bg-img p-8 pb-20'>
-         <h1 class='text-5xl mb-8 font-bold'>Highest <span class='text-yellow-500'>Standards</span> of Construction</h1>
+         <h1 class='text-5xl mb-8 font-bold'>Highest <span class='text-yellow-500'>Standard</span> of Construction</h1>
          <p>Lorem Ipsum dolor sit amet Lorem Ipsum dolor sit ametLorem Ipsum dolor sit ametLorem Ipsum dolor sit ametLorem Ipsum dolor sit amet</p>
          <button class=' p-4 mt-8 bg-yellow-500 text-white font-bold'>Find Out more</button>
       </div>
@@ -26,8 +26,8 @@
    </header>
    <main>
       <section>
-         <div class='p-9'>
-            <div class='mb-8 mt-8 border group hover:bg-yellow-500 '>
+         <div class='max-w-screen-sm m-auto p-9' id='cardOverlay'>
+            <div class=' mb-8 mt-8 border group hover:bg-yellow-500 '>
                <div><img src="https://i.vgy.me/sLYrDe.jpg" alt="sLYrDe.jpg"></div>
                <div class="p-6">
                   <h2 class='mb-4 mt-2 text-2xl font-bold text-blue-800 group-hover:text-white'>Architecture Design</h2>
@@ -460,7 +460,30 @@
          </div>
          <div class="p-6">
             <h2 class="mb-4 text-5xl font-bold">DIGITAL LLC</h2>
-            <p>Free CRM system for your sales team with all the essential tools sales funnel, pipeline management, sales reports, 360-degree customer view, support for repeat sales </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis luctus mauris nisi, et vehicula nulla dignissim ac. Nullam quis commodo sem. Curabitur mattis justo velit </p>
+         </div>
+         <!--Unordered list start here-->
+         <div class='mb-8 p-6'>
+            <h3 class='text-3xl font-semibold'>About</h3>
+            <ul>
+               <li class=' mt-4 mb-4'>About</li>
+               <li class=' mt-4 mb-4'>Affiliate Program</li>
+               <li class=' mt-4 mb-4'>Terms of Services</li>
+            </ul>
+         </div>
+         <div class='mb-4 p-6'>
+            <h3 class='text-3xl font-semibold'>Services</h3>
+            <ul>
+               <li class=' mt-4 mb-4'>Terms of Services</li>
+               <li class=' mt-4 mb-4'>Terms of Services</li>
+               <li class=' mt-4 mb-4'>Terms of Services</li>
+            </ul>
+         </div>
+         <div class='p-6'>
+            <h3 class='text-3xl font-bold'>Subscribe to our News Letter</h3>
+            <input class=' w-4/5 pt-4 mt-8 rounded-md' type="text">
+            <button class=' w-3/5 block p-3 mt-8 bg-yellow-500 text-white font-bold'>SUBMIT</button>
+            
          </div>
       </div>
    </footer>
